@@ -22,7 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<kotlin.version>1.2.41</kotlin.version>
+		<kotlin.version>1.2.71</kotlin.version>
 	</properties>
 
 	<dependencies>
@@ -104,6 +104,11 @@
             <artifactId>kmongo</artifactId>
             <version>3.8.2</version>
         </dependency>
+		<dependency>
+			<groupId>org.web3j</groupId>
+			<artifactId>quorum</artifactId>
+			<version>0.10.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -189,6 +194,17 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
